# lpos

./: .gitignore  README.md  html-to-docx.d.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  server.ts  tsconfig.json
.claude/: launch.json
app/: global-error.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
app/_media/: page.tsx
app/dashboard/: page.tsx
app/guest/: page.tsx
app/guest-pin/: page.tsx
app/lp-update/: page.tsx
app/media/: page.tsx
app/people/: PeoplePageClient.tsx  page.tsx
app/platform/: page.tsx
app/projects/: ProjectsPageClient.tsx  page.tsx
app/prospects/: page.tsx
app/queue/: page.tsx
app/settings/: page.tsx
app/signin/: page.tsx
app/slate/: page.tsx
components/: PresenceReporter.tsx
components/dashboard/: ActivityFeed.tsx  ActivityHistoryModal.tsx  ActivityStrip.tsx  DashboardClient.tsx  MentionTextarea.tsx  NewTaskModal.tsx  StatCard.tsx  TaskDetailModal.tsx
components/guest/: BlockedMessage.tsx
components/home/: WhatsNewWidget.tsx
components/media/: AssetDetailPanel.tsx  BatchSetThumbnailModal.tsx  CollectionCard.tsx  FilterBar.tsx  GlobalSharesManager.tsx  InlineVideoPlayer.tsx  MediaAssetCard.tsx  MediaDetailPanel.tsx  MediaFolderCard.tsx  MediaItemCard.tsx  MediaNav.tsx  MediaProjectCard.tsx  PublishCard.tsx  SardiusPushModal.tsx  TranscriptViewerPanel.tsx  VideoAssetRow.tsx  VideoDetailPanel.tsx  VideoTheaterMode.tsx
components/projects/: AssetList.tsx  AssetPreviewPanel.tsx  AssetsTab.tsx  ClientAssetsTab.tsx  DeliverableModal.tsx  DeliverablesHub.tsx  DeliverablesPanel.tsx  DeliveryPanel.tsx  JobList.tsx  LinkGroupManagementModal.tsx  MediaTab.tsx  MergeProgressModal.tsx  OwnerAvatar.tsx  OwnerPicker.tsx  PassPrepTab.tsx  PhotosTab.tsx  ProjectCard.tsx  ProjectDetail.tsx  ProjectHeader.tsx  ProjectWorkflowNav.tsx  ScriptEditorPanel.tsx  ScriptsTab.tsx  SharesPanel.tsx  SharesTab.tsx  Timeline.tsx  WorkflowActions.tsx
components/prospects/: ContactModal.tsx  DemoteModal.tsx  NewPersonModal.tsx  PromoteModal.tsx  UpdatesLog.tsx
components/queue/: QueueView.tsx
components/settings/: ActiveClientsCard.tsx  AdminsPanel.tsx  CloudflareOrphansPanel.tsx  ConsoleAlertsCard.tsx  DriveSettingsClient.tsx  GuestPinCard.tsx  LpReleasesCard.tsx  ProspectsAccessPanel.tsx  SlackTestCard.tsx  SlackUsersCard.tsx  StorageSettingsClient.tsx  TaskCategoriesPanel.tsx  WhatsNewTestCard.tsx
components/shared/: BackButton.tsx  ConfirmModal.tsx  ContextMenu.tsx  DatePicker.tsx  NewProjectModal.tsx  RenameModal.tsx
components/shell/: AppShell.tsx  Breadcrumb.tsx  IngestTray.tsx  NavBar.tsx  NotifBell.tsx  PipelineTray.tsx  RestartButton.tsx  RestartCountdownBanner.tsx  ServiceWorkerRegistrar.tsx  Sidebar.tsx  Topbar.tsx  TranscriptTray.tsx  UploadTray.tsx  UserMenu.tsx  WishListButton.tsx
components/slate/: AtemPanel.tsx  CameraPanel.tsx  LightingPanel.tsx  LightingPresets.tsx  PlaybackPanel.tsx  SlateModal.tsx  SlatePageContent.tsx  SonyCameraPanel.tsx  WledPanel.tsx  lighting-controls.tsx
components/studio/: PresentationPanel.tsx
components/tasks/: CommentThread.tsx  PlatformListView.tsx  TaskBoard.tsx  TaskCard.tsx  TaskColumn.tsx  TaskContextMenu.tsx  TaskDetailModal.tsx  TaskSidePanel.tsx
components/transcripts/: TranscriptOutputList.tsx  TranscriptPageActions.tsx
contexts/: ContextMenuContext.tsx  ToastContext.tsx  VersionConfirmContext.tsx
docs/: README.md  changelog.json  frameio-v4-openapi.json  integration-contracts.md  project history.md  runtime-dependencies.md  sony-camera-sdk-setup.md  spec2.json  spec3.json  spec4.json
hooks/: useClientOwners.ts  useClientStats.ts  useContextMenu.ts  useCurrentUser.ts  useDeliveryNotifications.ts  useIngestQueue.ts  useLighting.ts  useLightingPresets.ts  usePipelineQueue.ts  usePresentation.ts  useProjects.ts  useProspectNotifications.ts  useSlate.ts  useTaskBroadcasts.ts  useTaskNotifications.ts  useTranscriptQueue.ts  useUploadQueue.ts
lib/: ingest-db.ts  lighting-constants.ts  pipeline-helpers.ts  upload-constants.ts
lib/cami/: chat.ts
lib/demo-data/: assets.ts  events.ts  index.ts  jobs.ts  media-collections.ts  media-folders.ts  media-items.ts  media-projects.ts  projects.ts  publish-records.ts
lib/models/: activity-bucket.ts  activity.ts  asset.ts  canonical-asset.ts  client-owner.ts  deliverable.ts  delivery-notification.ts  event.ts  job.ts  media-asset.ts  media-collection.ts  media-item.ts  photo-asset.ts  project-note.ts  project.ts  prospect-notification.ts  prospect.ts  publish-record.ts  script-asset.ts  task-categories.ts  task-category.ts  task-comment.ts  task-notification.ts  task-phase.ts  task.ts  user.ts  wish.ts
lib/passprep/: core.ts  generate-plan.ts  workbook.ts
lib/selectors/: dashboard.ts  projects.ts
lib/services/: activity-actor.ts  activity-monitor-service.ts  amaran-service.ts  api-auth.ts  app-origin.ts  atem-bridge-client.ts  atem-utils.ts  backup-service.ts  camera-control-service.ts  client-stats.ts  cloudflare-captions-sync.ts  cloudflare-orphan-reconciler.ts  cloudflare-stream.ts  container.ts  cq-mixer-client.ts  deliverable-publish.ts  delivery-job-registry.ts  delivery-notification-service.ts  drive-client.ts  drive-folder-service.ts  drive-script-sync.ts  drive-transcript-sync.ts  drive-watcher-service.ts  frameio-compress.ts  frameio-tokens.ts  frameio-upload.ts  frameio.ts  guest-pin.ts  ingest-queue-service.ts  leaderpass-publish.ts  lp-release-service.ts  media-finalization.ts  media-probe.ts  media-processor.ts  merge-worker.ts  passprep-service.ts  photo-image-service.ts  presence-service.ts  (+23 more)
native/sony-camera-bridge/: CMakeLists.txt  README.md
native/sony-camera-bridge/build-mac/: CMakeCache.txt  Makefile  cmake_install.cmake
native/sony-camera-bridge/src/: main.cpp
public/: sw.js
runtime/: README.md
scripts/: backfill-thumbnails.ts  build-sony-camera-bridge.cmd  build-sony-camera-bridge.sh  extract-pdf-text.mjs  migrate-json-to-sqlite.ts  migrate-legacy-media.ts  prepare-lpos-runtime.mjs  start.sh  test-slack.mjs
tests/: activity-monitor.test.ts  transcript-search.test.ts
(+251 files in other folders)
